--- a/pages/generative-and-rag/text.mdx
+++ b/pages/generative-and-rag/text.mdx
@@ -3,17 +3,16 @@ import { Tabs } from "nextra/components"
 
 # Text Generation
 
-Generate natural language content using AI with flexible input methods - from simple prompts to structured message sequences. The system supports various models and parameters to fine-tune output, making it ideal for content creation, analysis, and conversational interactions.
+Generate natural language content using AI with flexible input methods - from simple prompts to structured message sequences. 
 
 ## Basic Generation
-
-A straightforward example of text generation using a simple prompt. The `.generate.text()` method takes a natural language prompt as input and returns AI-generated content with usage metadata showing token consumption. Learn more in our [Text Generation Guide](/generative-api/text-gen).
+When you need to generate text content from a simple prompt, use `.generate.text()`. This is useful for creating content like explanations, summaries, or reports. [Learn more about basic text generation](/generative-api/text-gen#example-1---basic-prompt).
 
 ```typescript
 const {
-  data: { payload },
+  data: { payload }
 } = await unbody.generate
-        .text("Explain AI's impact on healthcare.");
+                .text("Explain AI's impact on healthcare");
 ```
 
 <Collapse title="Response">
@@ -32,21 +31,20 @@ const {
 </Collapse>
 
 ## Generation with Options
-
-In this example, we demonstrate fine-tuned text generation by configuring model parameters. Using the `.generate.text()` method with options like temperature, token limits, and sampling controls, we can precisely control the output characteristics.
+Sometimes you need more control over the generated content. Use options like temperature and token limits to fine-tune the output style and length. [Learn more about Options](/generative-api/text-gen#options)
 
 ```typescript
 const {
-  data: { payload },
+  data: { payload }
 } = await unbody.generate
-        .text("Write a report on climate change.", {
-            model: "gpt-4",
-            topP: 0.7,
-            maxTokens: 1000,
-            temperature: 0.7,
-            presencePenalty: 0,
-            frequencyPenalty: 0,
-        });
+                .text("Write a report on climate change", {
+                  model: "gpt-4",
+                  topP: 0.7,
+                  maxTokens: 1000,
+                  temperature: 0.7,
+                  presencePenalty: 0,
+                  frequencyPenalty: 0
+                });
 ```
 
 <Collapse title="Response">
@@ -67,33 +65,29 @@ const {
 </Collapse>
 
 ## Multi-Message Generation
-
-Showcases structured message-based generation with `.generate.text()`. The code uses a message array to define system and user roles, configuring parameters like model, temperature, and token limits for controlled output.
+When you need to send role-based messages array as a prompt, use [Message-Based Input](/generative-api/text-gen#example-3---message-based-input). This approach helps when providing system instructions or creating multi-turn conversations with different roles. This works particularly well for creating expert personas or maintaining specific conversation contexts.
 
 ```typescript
 const {
-  data: { payload },
+  data: { payload }
 } = await unbody.generate
-        .text(
-            [
-                {
+                .text([
+                  {
                     role: "system",
-                    content: "You are an expert on AI."
-                },
-                {
+                    content: "You are an expert on AI"
+                  },
+                  {
                     role: "user",
                     content: "What are the latest AI trends in 2024?"
-                },
-            ],
-            {
-                model: "gpt-4",
-                topP: 0.7,
-                maxTokens: 1000,
-                temperature: 0.7,
-                presencePenalty: 0,
-                frequencyPenalty: 0,
-            }
-        );
+                  }
+                ], {
+                  model: "gpt-4",
+                  topP: 0.7,
+                  maxTokens: 1000,
+                  temperature: 0.7,
+                  presencePenalty: 0,
+                  frequencyPenalty: 0
+                });
 ```
 
 <Collapse title="Response">
